--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <div class="content">
                 <h1>Congratulations, Babi!</h1>
                 <p>I just want to say how very proud I am of you. Getting this far demonstrates your hard work, devotion, and intelligence.</p>
-                <p>Watching you grow and achieve your dreams fills my heart with joy. With each step, you shine brighter. This is simply another step on your path to a bright future.</p>
+
+                <p>Watching you grow and achieve your dreams fills my heart with joy. This is simply another step on your path to a bright future.</p>
+
                 <p>I'm here to support you every step of the way. Congratulations again, my Doctor. You deserve all the happiness in the world!</p>
                 <button id="surpriseButton">Click Me!</button>
                 <div id="heartContainer"></div>
